# LangBro

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
admin/: __main__.py  app.py  auth.py  config.py  database.py
alembic/: env.py
alembic/versions/: 8d83caca5c4a_initial_schema.py
bot/: __main__.py  app.py  config.py  metrics.py
bot/db/: engine.py  models.py
bot/db/repositories/: battle_repo.py  challenge_repo.py  conversation_repo.py  quiz_repo.py  report_repo.py  stats_repo.py  user_repo.py  wotd_repo.py
bot/handlers/: admin.py  challenge.py  coach.py  common.py  profile.py  pronounce.py  quiz.py  report.py  start.py  stats.py
bot/llm/: client.py  schemas.py
bot/llm/prompts/: bot_persona.py  coach.py  digest_generator.py  quiz_generator.py  report_parser.py  wotd_generator.py
bot/middlewares/: challenge_context.py  db_session.py  metrics.py  user_registration.py
bot/scheduler/: jobs.py  setup.py
bot/services/: battle_service.py  coach_service.py  digest_service.py  quiz_service.py  report_service.py  scoring_service.py  streak_service.py  tts_service.py  weekly_digest_service.py  wotd_service.py
docs/: 01_TECHNICAL_SPEC.md  02_DATABASE_SCHEMA.md  03_ARCHITECTURE.md  04_LLM_PROMPTS.md  05_DEPLOY_AND_ONBOARDING.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: langbro.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
tests/: conftest.py  test_admin.py  test_coach_service.py  test_digest_service.py  test_profile.py  test_schemas.py  test_scoring.py  test_streak.py
