[project]
name = "langbro"
version = "1.0.0"
description = "LangBro - AI English Challenge Telegram Bot"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4,<4.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "google-generativeai>=0.8,<1.0",
    "apscheduler>=3.10,<4.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "tenacity>=8.2,<10.0",
    "python-dotenv>=1.0,<2.0",
    "edge-tts>=7.0,<8.0",
    "prometheus-client>=0.20,<1.0",
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]

[tool.setuptools.packages.find]
include = ["bot*", "admin*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
